Added image from s3 bucket

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
     <title>About Us</title>
     <style>
         body {
-            background-image: url("/static/{{ background_image }}");
+            background-image: url("{{ background_image }}");
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
