--- a/templates/getemp.html
+++ b/templates/getemp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>Get Employee</title></head>
-<body style="background: #C1FF9C;">
+<body style="background-image: url('{{ background_image }}'); background-size: cover; background-repeat: no-repeat; background-position: center;">
     <center>
         <h1>{{ group_name }} - Get Employee Info</h1>
         <form action="/fetchdata" method="POST">
