--- a/templates/addempoutput.html
+++ b/templates/addempoutput.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>Add Emp Output</title></head>
-<body style="background: #C1FF9C;">
+<body style="background-image: url('{{ background_image }}'); background-size: cover; background-repeat: no-repeat; background-position: center;">
     <center>
         <h1>✅ {{ name }} was successfully added to the database</h1>
         <h3>{{ group_name }}</h3>
