--- a/templates/getempoutput.html
+++ b/templates/getempoutput.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><title>Employee Info</title></head>
-<body style="background: #C1FF9C;">
+<body style="background-image: url('{{ background_image }}'); background-size: cover; background-repeat: no-repeat; background-position: center;">
     <center>
         <h1>{{ group_name }}</h1>
         <h2>Employee Info</h2>
